--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,13 @@
         <maven.compiler.source>14</maven.compiler.source>
         <maven.compiler.target>14</maven.compiler.target>
         <junit.version>5.6.0</junit.version>
+        <jetty.version>9.4.28.v20200408</jetty.version>
     </properties>
-    <dependencies>
-        <dependency>
+    <dependencies>       
+         <dependency>
             <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-server</artifactId>
-            <version>9.4.27.v20200227</version>
+            <artifactId>jetty-webapp</artifactId>
+            <version>${jetty.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
